# PlayerTwo

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: import-tcno.mjs  shots.mjs
src/: App.tsx  SettingsDialog.tsx  UpdateNotifier.tsx  api.ts  main.tsx  platformIcons.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/defs/: builtin.json  mod.rs
src-tauri/src/os/: mod.rs  stub.rs  windows.rs
src-tauri/src/switcher/: engine.rs  epic.rs  mod.rs  model.rs  settings.rs  steam.rs  store.rs
